// SPDX-FileCopyrightText: (C) 2025 Intel Corporation
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package v1;

import "google/api/field_behavior.proto";
import "validate/validate.proto";

// Metadata represents a single value of metadata.
message Metadata {
  string key = 1 [(google.api.field_behavior) = REQUIRED, (validate.rules).string = {min_len: 1, max_len: 40, pattern: "^[a-z0-9][a-z0-9-]{0,38}[a-z0-9]{0,1}$"}];
  string value = 2 [(google.api.field_behavior) = REQUIRED, (validate.rules).string = {min_len: 1, max_len: 40, pattern: "^[a-z0-9][a-z0-9-]{0,38}[a-z0-9]{0,1}$"}];
}

// StoredMetadata represents all stored metadata values for a given key.
message StoredMetadata {
  string key = 1 [(google.api.field_behavior) = REQUIRED, (validate.rules).string = {min_len: 1, max_len: 40, pattern: "^[a-z0-9][a-z0-9-]{0,38}[a-z0-9]{0,1}$"}];
  repeated string values = 2 [(google.api.field_behavior) = REQUIRED];
}